remove appconfig.json
